--- a/receiving-page-example.html
+++ b/receiving-page-example.html
@@ -1,2 +1,2 @@
 <div id="widget-connect"></div>
-<script></script>$( "#widget-connect" ).load( "http://serving-page-url.com" );</script>
+<script>$( "#widget-connect" ).load( "http://serving-page-url.com" );</script>
